refacto some code

--- a/styles.scss
+++ b/styles.scss
@@ -6,10 +6,8 @@
 @import './scss/Scans.scss';
 @import './scss/Animes.scss';
 
-//Componentc
-@import './scss/components/Description.scss';
-@import './scss/components/FlipCard.scss';
-@import './scss/components/Presentation.scss';
+//Components
+@import './scss/components/Text.scss';
 @import './scss/components/Loader.scss';
 @import './scss/components/Card-anime.scss';
 @import './scss/components/Card-news.scss';
