refacto Banner & scans page

--- a/scss/App.scss
+++ b/scss/App.scss
@@ -28,4 +28,19 @@ body {
             background-position: center right !important;
         }
     }
+    .title {
+        color: white;
+        font-weight: bold;
+        font-size: 40px;
+        text-align: center;
+        text-shadow: black 4px 3px;
+        margin-top: 40%;
+        text-transform: uppercase;
+        @media screen and (min-width: $md) and (max-width: $lg) {
+            margin-top: 20%;
+        }
+        @media screen and (min-width: $lg) {
+            margin-top: 12%;
+        }
+    }
 }
