add tags to news

--- a/styles.scss
+++ b/styles.scss
@@ -15,3 +15,4 @@
 @import './scss/components/Card-scansVa.scss';
 @import './scss/components/Footer.scss';
 @import './scss/components/Header.scss';
+@import './scss/components/Tags.scss';
