--- a/scss/components/Footer.scss
+++ b/scss/components/Footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: $main-color;
     padding: 20px;
-    text-align: center;
+    text-align: right;
     color: $five-color;
 }
