add scroll top when scroll

--- a/scss/App.scss
+++ b/scss/App.scss
@@ -44,3 +44,15 @@ body {
         }
     }
 }
+
+.scroll-up {
+    color: $main-color;
+    font-size: 60px;
+}
+
+.scroll-more {
+    color: $main-color;
+    font-size: 90px;
+    display: block;
+    text-align: center;
+}
