change loader to skeleton loader

--- a/styles.scss
+++ b/styles.scss
@@ -16,3 +16,4 @@
 @import './scss/components/Footer.scss';
 @import './scss/components/Header.scss';
 @import './scss/components/Tags.scss';
+@import './scss/components/Skeleton.scss';
