--- a/scss/components/Card-scansVa.scss
+++ b/scss/components/Card-scansVa.scss
@@ -2,6 +2,8 @@
     transform-style: preserve-3d;
     backface-visibility: hidden;
     margin: 10px;
+    margin-top: 0;
+    margin-bottom: 20px;
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
