--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -23,8 +23,11 @@
 }
 
 .tag-skeleton {
+    @media screen and (max-width: $md) {
+        display: none;
+    }
     height: 40px;
-    width: 400px;
+    width: calc(100% - 60px);
     margin-top: 40px;
     margin-left: 30px;
 }
