refacto literal object & anonym function & start to add Dev Page

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,7 @@
 @import './scss/News.scss';
 @import './scss/Scans.scss';
 @import './scss/Animes.scss';
+@import './scss/NewsDev.scss';
 
 //Components
 @import './scss/components/Text.scss';
