--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -43,7 +43,7 @@
         }
         .logo {
             position: relative;
-            cursor: default;
+            cursor: pointer;
             display: inline-block;
             &:hover {
                 background-color: transparent;
