--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@
 @import './scss/components/Card-news.scss';
 @import './scss/components/Card-scans.scss';
 @import './scss/components/Card-scansVa.scss';
+@import './scss/components/Card-newsDev.scss';
 @import './scss/components/Footer.scss';
 @import './scss/components/Header.scss';
 @import './scss/components/Tags.scss';
