--- a/scss/Home.scss
+++ b/scss/Home.scss
@@ -16,23 +16,43 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: flex-start;
-        }
-    }
-    .scans {
-        margin-bottom: 50px;
-        h2 {
-            color: $second-color;
-            font-weight: bold;
-            font-size: 34px;
-            text-align: center;
-        }
-        .card-container {
-            padding: 20px;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: flex-start;
+            justify-content: center;
+            .card-news-home {
+                @media screen and (max-width: $xs) {
+                    width: calc(45%);
+                }
+                @media screen and (min-width: $xs) and (max-width: $md) {
+                    width: calc(30%);
+                }
+                @media screen and (min-width: $md) and (max-width: $lg) {
+                    width: calc(30%);
+                }
+                @media screen and (min-width: $lg) and (max-width: $xlg) {
+                    width: calc(20%);
+                }
+                @media screen and (min-width: $xlg) {
+                    width: calc(15%);
+                }
+                height: 80px;
+                background-color: $second-color;
+                color: white;
+                text-align: center;
+                padding: 10px;
+                border: 1px solid white;
+                font-size: 30px;
+                text-decoration: none;
+                transition: 0.1s;
+                cursor: pointer;
+                span {
+                    transform: translateY(35%);
+                    display: block;
+                }
+                &:hover {
+                    transform: scale(1.2, 1.2);
+                    z-index: 1;
+                    background-color: $main-color;
+                }
+            }
         }
     }
     .cta {
