--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -3,7 +3,7 @@
     border-color: #D8D8D8;
     position: relative;
     overflow: hidden;
-    
+
     &::after {
         content: '';
         position: absolute;
@@ -27,7 +27,7 @@
         display: none;
     }
     height: 40px;
-    width: calc(100% - 60px);
+    width: 60%;
     margin-top: 40px;
     margin-left: 30px;
 }
@@ -69,7 +69,7 @@
     }
     box-shadow: 5px 5px 5px $main-color;
     margin-bottom: 20px;
-    background-color: $second-color; 
+    background-color: $second-color;
     margin: 10px;
     padding: 10px;
 }
@@ -124,7 +124,7 @@
         opacity: 0.5;
         left: -100%;
     }
-    
+
     to {
         opacity: 1;
         left: 200%;
