--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -69,7 +69,7 @@
     }
     box-shadow: 5px 5px 5px $main-color;
     margin-bottom: 20px;
-    background-color: $second-color;
+    background-color: #D8D8D8;
     margin: 10px;
     padding: 10px;
 }
