--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -83,6 +83,8 @@
 
 .card-scansva-skeleton {
     margin: 10px;
+    margin-top: 0;
+    margin-bottom: 20px;
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
