add skeleton to cardDev

--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -50,6 +50,7 @@
             }
             .mini {
               width: 27px;
+              left: 15px;
               top: 0;
             }
             img {
