--- a/scss/App.scss
+++ b/scss/App.scss
@@ -3,6 +3,7 @@ $second-color: #e4d2d8;
 $third-color: #e9dfe5;
 $fourd-color: #fdeff2;
 $five-color: #fef4f4;
+$six-color: #d9003a;
 
 $font: 'Kaushan Script', cursive;
 
