--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -41,9 +41,9 @@
                     align-items: center;
                     time {
                         position: absolute;
-                        background: #f5af19;
-                        width: 200px;
-                        height: 30px;
+                        background: $main-color;
+                        color: white;
+                        padding: 5px;
                         top: -15px;
                         border-radius: 5px;
                         display: flex;
