--- a/scss/components/Card-news.scss
+++ b/scss/components/Card-news.scss
@@ -2,20 +2,24 @@
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
-    @media screen and (min-width: $xs) and (max-width: $md) {
+    @media screen and (min-width: $xs) and (max-width: $lg) {
         width: calc(50% - 20px);
     }
-    @media screen and (min-width: $md) and (max-width: $lg) {
-        width: calc(30% - 20px);
+    @media screen and (min-width: $lg) and (max-width: $xlg) {
+        width: calc(33% - 20px);
     }
-    @media screen and (min-width: $lg) {
+    @media screen and (min-width: $xlg) {
         width: calc(25% - 20px);
+        // height: 35vh;
     }
 
     box-shadow: 5px 5px 5px $main-color;
     margin: 10px;
     background-color: $second-color;
     transition: 0.4s;
+    position: relative;
+    overflow: hidden;
+    height: 30vh;
     &:hover {
         transform: scale(0.9, 0.9);
     }
@@ -25,15 +29,63 @@
     }
     img {
         width: 100%;
-        height: 200px;
+        height: 100%;
         object-fit: cover;
+    }
+    .card__svg {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        path:first-child {
+            fill: black;
+            fill-opacity: 0.5;
+        }
+    }
+    h3 {
+        text-shadow: black 0.5px 0.5px;
+        color: white;
+        margin: 0;
+        font-size: 16px;
+        position: absolute;
+        bottom: -7px;
+        padding: 10px;
+        width: 80%;
+    }
+    .date {
+        margin: 0;
+        padding: 5px;
+        font-size: 12px;
+        color: white;
+        text-shadow: black 0.5px 0.5px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: rgba(0,0,0,0.5);
+    }
+    button {
+        background-color: rgba(0,0,0,0.5);
+        text-shadow: black 0.5px 0.5px;
+        padding: 5px;
+        border-color: transparent;
+        color: white;
+        font-weight: bold;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
     &-content {
         padding: 10px;
+        position: absolute;
+        bottom: -7px;
+        width: calc(100% - 20px);
         .date {
             margin: 0;
-            float: right;
             font-size: 12px;
+            color: white;
+            text-shadow: black 0.5px 0.5px;
+            position: absolute;
+            top: 0;
+            right: 0;
         }
         button {
             background-color: $main-color;
@@ -42,6 +94,8 @@
             border: white;
             color: white;
             font-weight: bold;
+            position: absolute;
+            display: none;
         }
     }
 }
