--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -36,17 +36,19 @@
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
-    @media screen and (min-width: $xs) and (max-width: $md) {
+    @media screen and (min-width: $xs) and (max-width: $lg) {
         width: calc(50% - 20px);
     }
-    @media screen and (min-width: $md) and (max-width: $lg) {
-        width: calc(30% - 20px);
+    @media screen and (min-width: $lg) and (max-width: $xlg) {
+        width: calc(33% - 20px);
     }
-    @media screen and (min-width: $lg) {
-        width: calc(20% - 20px);
+    @media screen and (min-width: $xlg) {
+        width: calc(25% - 20px);
     }
     box-shadow: 5px 5px 5px $main-color;
     margin: 10px;
+    height: 30vh;
+    overflow: hidden;
     .card-news-skeleton-content {
         background-color: white;
         padding: 10px;
