--- a/scss/components/Card-scansVa.scss
+++ b/scss/components/Card-scansVa.scss
@@ -4,6 +4,7 @@
     margin: 10px;
     margin-top: 0;
     margin-bottom: 20px;
+    box-shadow: 5px 5px 5px $main-color;
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
@@ -52,12 +53,12 @@
             bottom: 12px;
             width: 100%;
             color: #FFF;
+            text-shadow: black 0.5px 0.5px;
             text-decoration: none;
             text-align: center;
             transition: transform .6s;
             button {
                 background-color: $main-color;
-                border-radius: 100px;
                 padding: 5px 10px;
                 border: white;
                 color: white;
