--- a/scss/components/Card-scans.scss
+++ b/scss/components/Card-scans.scss
@@ -1,11 +1,12 @@
 .card-scans {
     box-shadow: 5px 5px 5px $main-color;
-    margin-bottom: 20px;
-    background-color: $second-color;
+    margin-bottom: 16px;
     display: block;
     width: 100%;
+    transition: transform 0.4s;
     position: relative;
-    transition: 0.4s;
+    cursor: pointer;
+    z-index: 1;
     &:hover {
         transform: scale(0.9, 0.9);
     }
@@ -13,35 +14,60 @@
         display: flex;
         text-decoration: none;
         color: inherit;
+        background-color: rgba(0,0,0,0.5);
+        filter: blur(3px);
         img {
-            width: 80px;
+            width: 100%;
             height: 90px;
             object-fit: cover;
-            flex: 30%;
         }
         &-content {
-            flex: 70%;
             height: 80px;
             font-size: 14px;
             padding: 5px;
-            text-align: center;
-            h3 {
-                margin: 5px 0;
-            }
-            .date {
-                font-size: 12px;
-                margin: 0;
-            }
-            button {
-                background-color: $main-color;
-                border-radius: 100px;
-                padding: 5px 10px;
-                border: white;
-                color: white;
-                font-weight: bold;
-                position: absolute;
-                top: 88%;
-                left: 8%;
+            // text-align: center;
+            background-color: rgba(0,0,0,0.5);
+            color: white;
+            position: absolute;
+            top: 0;
+            width: calc(100% - 10px);
+            &-infos {
+                display: flex;
+                img {
+                    flex: 20%;
+                    height: 70px;
+                    object-fit: cover;
+                    margin-left: 5px;
+                    margin-top: 5px;
+                }
+                div {
+                    flex: 70%;
+                    h3 {
+                        margin-top: 15px;
+                        margin-left: 10px;
+                        // transform: translateY(50%);
+                        text-shadow: black 0.5px 0.5px;
+                        font-size: 18px;
+                    }
+                    .date {
+                        font-size: 12px;
+                        margin: 0;
+                        text-shadow: black 0.5px 0.5px;
+                        position: absolute;
+                        right: 5px;
+                        top: 5px;
+                    }
+                    button {
+                        background-color: $main-color;
+                        padding: 5px 10px;
+                        border: white;
+                        color: white;
+                        font-weight: bold;
+                        position: absolute;
+                        bottom: 5px;
+                        right: 5px;
+                    }
+                }
             }
         }
     }
