--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -90,6 +90,7 @@
     margin: 10px;
     margin-top: 0;
     margin-bottom: 20px;
+    box-shadow: 5px 5px 5px $main-color;
     @media screen and (max-width: $xs) {
         width: calc(100% - 20px);
     }
