--- a/scss/Home.scss
+++ b/scss/Home.scss
@@ -38,17 +38,32 @@
                 background-color: $second-color;
                 color: white;
                 text-align: center;
-                padding: 10px;
                 border: 1px solid white;
-                font-size: 30px;
+                font-size: 25px;
                 text-decoration: none;
                 transition: 0.1s;
                 cursor: pointer;
+                position: relative;
+                img {
+                    width: 100%;
+                    left: 0;
+                    filter: blur(3px);
+                    object-fit: cover;
+                    height: 100%;
+                }
+                &-content {
+                    position: absolute;
+                    background-color: rgba(0, 0, 0, 0.4);
+                    top: 0;
+                    bottom: 0;
+                    height: 80px;
+                    width: 100%;
+                }
                 span {
                     @media screen and (max-width: $xs) {
                         transform: translateY(75%);
                     }
-                    transform: translateY(35%);
+                    transform: translateY(50%);
                     display: block;
                 }
                 &:hover {
