--- a/scss/Home.scss
+++ b/scss/Home.scss
@@ -36,6 +36,7 @@
                 }
                 height: 80px;
                 background-color: $second-color;
+                text-shadow: black 0.5px 0.5px;
                 color: white;
                 text-align: center;
                 border: 1px solid white;
