--- a/scss/components/Card-news.scss
+++ b/scss/components/Card-news.scss
@@ -15,12 +15,30 @@
     box-shadow: 5px 5px 5px $main-color;
     margin: 10px;
     background-color: $second-color;
-    transition: 0.4s;
     position: relative;
     overflow: hidden;
     height: 30vh;
     &:hover {
-        transform: scale(0.9, 0.9);
+        .card__svg {
+            left: 100%;
+        }
+        .black-box {
+            width: 100%;
+        }
+        h3 {
+            font-size: 18px;
+        }
+        p {
+            left: 5%;
+        }
+    }
+    .black-box {
+        background-color: rgba(0,0,0,0.7);
+        height: 30vh;
+        width: 0;
+        transition: width 0.2s;
+        position: absolute;
+        bottom: 0;
     }
     a {
         text-decoration: none;
@@ -35,9 +53,10 @@
         position: absolute;
         left: 0;
         bottom: 0;
+        transition: left 0.2s;
         path:first-child {
             fill: black;
-            fill-opacity: 0.5;
+            fill-opacity: 0.7;
         }
     }
     h3 {
@@ -49,6 +68,19 @@
         bottom: -7px;
         padding: 10px;
         width: 80%;
+        transition: font-size 0.2s;
+    }
+    p {
+        text-shadow: black 0.5px 0.5px;
+        color: white;
+        margin: 0;
+        font-size: 15px;
+        position: absolute;
+        left: -100%;
+        transition: left 0.2s;
+        padding: 10px;
+        width: 80%;
+        top: 10%;
     }
     .date {
         margin: 0;
@@ -71,30 +103,5 @@
         position: absolute;
         top: 0;
         left: 0;
-    }
-    &-content {
-        padding: 10px;
-        position: absolute;
-        bottom: -7px;
-        width: calc(100% - 20px);
-        .date {
-            margin: 0;
-            font-size: 12px;
-            color: white;
-            text-shadow: black 0.5px 0.5px;
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-        button {
-            background-color: $main-color;
-            border-radius: 100px;
-            padding: 10px 20px;
-            border: white;
-            color: white;
-            font-weight: bold;
-            position: absolute;
-            display: none;
-        }
     }
 }
