--- a/scss/Scans.scss
+++ b/scss/Scans.scss
@@ -5,7 +5,7 @@
             display: flex;
         }
         h2 {
-            color: $second-color;
+            color: $third-color;
             font-weight: bold;
             font-size: 34px;
             text-align: center;
