--- a/scss/components/Card-newsDev.scss
+++ b/scss/components/Card-newsDev.scss
@@ -33,5 +33,6 @@
         font-weight: bold;
         text-transform: uppercase;
         float: right;
+        text-shadow: black 0.5px 0.5px;
     }
 }
