--- a/scss/Home.scss
+++ b/scss/Home.scss
@@ -5,11 +5,11 @@
     .news {
         margin-bottom: 50px;
         h2 {
-            color: $second-color;
+            color: $third-color;
             font-weight: bold;
             font-size: 34px;
             text-align: center;
-            text-shadow: black 0.5px 0.5px;
+            text-shadow: $second-color 0.5px 0.5px;
         }
         .card-container {
             padding: 20px;
