--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-color: $five-color;
+    background-color: $background-color;
     box-shadow: 0px 5px 5px $main-color;
     position: fixed;
     text-align: center;
@@ -27,17 +27,17 @@
             list-style-type: none;
             a {
                 text-decoration: none;
-                color:  $main-color;
+                color:  $third-color;
                 font-weight: bold;
                 width: 100%;
                 padding: 20px;
                 &:hover {
-                  color: $second-color;
+                  color: $main-color;
                   text-shadow: black 0.5px 0.5px;
                 }
             }
             .active {
-              color: $second-color;
+              color: $main-color;
               text-shadow: black 0.5px 0.5px;
             }
         }
@@ -83,7 +83,7 @@
       padding: 0;
       margin: 0;
       padding-top: 50px;
-      background-color: $five-color;
+      background-color: $background-color;
       position: absolute;
       transition: left 1s;
       top: 50px;
