--- a/scss/components/Tags.scss
+++ b/scss/components/Tags.scss
@@ -7,12 +7,13 @@
     .tag {
         cursor: pointer;
         margin: 0px 10px;
-        color: $second-color;
-        text-shadow: black 0.5px 0.5px;
+        color: $third-color;
+        text-shadow: $second-color 0.5px 0.5px;
         font-size: 20px;
         &:hover {
             color: $main-color;
             font-weight: bold;
+            text-shadow: black 0.5px 0.5px;
         }
     }
     .tag:first-child {
@@ -21,5 +22,6 @@
     .active {
         color: $main-color;
         font-weight: bold;
+        text-shadow: black 0.5px 0.5px;
     }
 }
