--- a/scss/components/Footer.scss
+++ b/scss/components/Footer.scss
@@ -2,10 +2,11 @@ footer {
     background-color: $main-color;
     padding: 20px;
     text-align: right;
-    color: $background-color;
-    text-shadow: black 0.5px 0.5px;
+    color: $third-color;
+    text-shadow: white 0.5px 0.5px;
     a {
         float: left;
-        color: $background-color;
+        color: $third-color;
+        text-decoration: none;
     }
 }
