--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -83,24 +83,28 @@
       padding: 0;
       margin: 0;
       padding-top: 50px;
-      background-color: $background-color;
       position: absolute;
-      transition: left 1s;
-      top: 50px;
-      left: -100%;
+      transition: right 500ms, top 500ms;
+      top: -100px;
+      right: -100%;
       width: 100%;
       z-index: -1;
-      box-shadow: -2px 5px 5px $main-color;
       li {
           cursor: pointer;
           padding: 20px;
           list-style-type: none;
+          position: relative;
+          text-align: left;
+          // border-bottom: 1px solid $main-color;
           a {
               text-decoration: none;
               color:  $main-color;
               font-weight: bold;
               width: 100%;
               padding: 20px;
+              position: relative;
+              text-transform: uppercase;
+              font-size: 22px;
               &:hover {
                 color: $second-color;
               }
@@ -108,16 +112,38 @@
                 margin-left: 15px;
                 position: relative;
                 top: 2px;
+                display: none;
               }
           }
           .active {
-            color: $second-color;
+            color: white;
           }
+      }
+      &::before {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: 0;
+        content: '';
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.9);
+        transition: all 500ms ease-in-out;
+        clip-path: circle(20px at calc(100% - 20px) 25px);
+        visibility: hidden;
       }
     }
     .menuIsOpen {
-      left: 0;
+      right: 0;
+      top: 40px;
     }
+}
+
+.menuIsOpenHeader {
+  .nav-mobile:before {
+    visibility: visible;
+    clip-path: circle(100%);
+  }
 }
 
 @keyframes bounceIn {
