--- a/styles.scss
+++ b/styles.scss
@@ -19,3 +19,4 @@
 @import './scss/components/Header.scss';
 @import './scss/components/Tags.scss';
 @import './scss/components/Skeleton.scss';
+@import './scss/components/Banner.scss';
