add animation on blockquote in home

--- a/scss/components/Text.scss
+++ b/scss/components/Text.scss
@@ -13,6 +13,7 @@
         padding: 10px 20px;
         font-family: $font;
         display: inline-block;
+        cursor: grab;
     }
     a {
         color: $third-color;
