--- a/scss/components/Card-news.scss
+++ b/scss/components/Card-news.scss
@@ -18,7 +18,10 @@
     position: relative;
     overflow: hidden;
     height: 30vh;
+    transition: all 0.5s;
     &:hover {
+        transform: scale(1.2);
+        z-index: 5;
         .card__svg {
             left: 100%;
         }
