--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -58,6 +58,7 @@
                         p {
                             text-align: center;
                             overflow-y: scroll;
+                            padding-right: 5px;
                             -ms-overflow-style: none;
                         }
                         p::-webkit-scrollbar {
