--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -1,17 +1,21 @@
 .banner {
     .title {
+		font-family: 'Kashima';
         color: white;
         font-weight: bold;
-        font-size: 40px;
+        font-size: 100px;
         text-align: center;
         text-shadow: black 4px 3px;
-        margin-top: 40%;
+        margin-top: 35%;
         text-transform: uppercase;
         @media screen and (min-width: $md) and (max-width: $lg) {
             margin-top: 20%;
         }
-        @media screen and (min-width: $lg) {
-            margin-top: 12%;
+        @media screen and (min-width: $lg) and (max-width: $xlg) {
+            margin-top: 15%;
+		}
+		@media screen and (min-width: $xlg) {
+            margin-top: 10%;
         }
     }
 }
@@ -24,11 +28,14 @@
 }
 
 .c-glitch {
-  height: 350px;
-  margin: 0 auto;
-  overflow: hidden;
+  	height: 275px;
+  	margin: 0 auto;
+  	overflow: hidden;
 	position: relative;
-  width: 100%;
+  	width: 100%;
+  	@media screen and (min-width: $md) {
+		height: 350px;
+	}
 }
 
 .c-glitch__img {
