--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -10,6 +10,7 @@
         padding: 0;
         margin: 0;
         z-index: 5;
+        padding-left: 22px;
         @media screen and (max-width: $md) {
           li {
             display: none;
@@ -26,6 +27,7 @@
             padding: 15px;
             list-style-type: none;
             a {
+                text-transform: uppercase;
                 text-decoration: none;
                 color:  $third-color;
                 font-weight: bold;
@@ -45,8 +47,10 @@
             position: relative;
             cursor: pointer;
             display: inline-block;
+            transition: all 0.5s;
             &:hover {
-                background-color: transparent;
+                // background-color: transparent;
+                transform: scale(1.3);
             }
             .mini {
               width: 27px;
