--- a/scss/components/Card-news.scss
+++ b/scss/components/Card-news.scss
@@ -20,16 +20,13 @@
     height: 30vh;
     transition: all 0.5s;
     &:hover {
-        transform: scale(1.2);
+        // transform: scale(1.2);
         z-index: 5;
         .card__svg {
             left: 100%;
         }
         .black-box {
             width: 100%;
-        }
-        h3 {
-            font-size: 18px;
         }
         p {
             left: 5%;
@@ -71,7 +68,13 @@
         bottom: -7px;
         padding: 10px;
         width: 80%;
-        transition: font-size 0.2s;
+        overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+
+   max-height: 45px;      /* fallback */
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
     }
     p {
         text-shadow: black 0.5px 0.5px;
