--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -61,21 +61,29 @@
   }
 
   .c-glitch:hover &:nth-child(2) {
-    animation-name: glitch-anim-1;
+	@media screen and (min-width: $lg) {
+		animation-name: glitch-anim-1;
+	}
   }
 
   .c-glitch:hover &:nth-child(3) {
-    animation-name: glitch-anim-2;
+	@media screen and (min-width: $lg) {
+		animation-name: glitch-anim-2;
+	}
   }
 
   .c-glitch:hover &:nth-child(4) {
-    animation-name: glitch-anim-3;
+	@media screen and (min-width: $lg) {
+		animation-name: glitch-anim-3;
+	}
   }
 
   .c-glitch:hover &:nth-child(5) {
-    animation-name: glitch-anim-4;
-    background-blend-mode: overlay;
-    background-color: #af4949;
+	@media screen and (min-width: $lg) {
+		animation-name: glitch-anim-4;
+		background-blend-mode: overlay;
+    	background-color: #af4949;
+	}
   }
 }
 
