--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -94,7 +94,7 @@
 @keyframes glitch-anim-1 {
 	0%, 100% {
 		opacity: 1;
-		transform: translate3d(40px, 0, 0) scale3d(-1, -1, 1);
+		transform: translate3d(0, 0, 0) scale3d(-1, -1, 1);
 		clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
 	}
 
