--- a/scss/Home.scss
+++ b/scss/Home.scss
@@ -1,16 +1,42 @@
 .Home {
     .homescreen {
         margin: 0;
-        height: 450px;
+        height: 70vh !important;
+        z-index: -2;
     }
     .news {
-        margin-bottom: 50px;
+        position: relative;
+        &:before {
+            content: '';
+            width: 100%;
+            height: 0;
+            position: absolute;
+            top: -120px;
+            display: block;
+            left: 0;
+            border-style: solid;
+            border-width: 0px 0 120px 200vh;
+            border-color: transparent transparent $background-color transparent;
+        }
+        &:after {
+            content: '';
+            width: 100%;
+            height: 0;
+            position: absolute;
+            bottom: -120px;
+            display: block;
+            right: 0;
+            border-style: solid;
+            border-width: 120px 200vh 0 0;
+            border-color: $background-color transparent transparent transparent;
+        }
         h2 {
             color: $third-color;
             font-weight: bold;
             font-size: 34px;
             text-align: center;
             text-shadow: $second-color 0.5px 0.5px;
+            margin-top: 0;
         }
         .card-container {
             padding: 20px;
