--- a/scss/components/Text.scss
+++ b/scss/components/Text.scss
@@ -1,11 +1,37 @@
 .text {
-    padding: 40px 20px;
+    padding: 0 20px;
     text-align: center;
+    position: relative;
+    &:before {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        top: -120px;
+        display: block;
+        left: 0;
+        border-style: solid;
+        border-width: 0px 0 120px 200vh;
+        border-color: transparent transparent $background-color transparent;
+    }
+    &:after {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        bottom: -120px;
+        display: block;
+        right: 0;
+        border-style: solid;
+        border-width: 120px 200vh 0 0;
+        border-color: $background-color transparent transparent transparent;
+        z-index: -1;
+    }
     h2 {
         color: $third-color;
         font-weight: bold;
         font-size: 34px;
-        margin-top: 10px;
+        margin-top: 0;
         text-shadow: $second-color 0.5px 0.5px;
     }
     blockquote {
