change header & banner

--- a/scss/components/Skeleton.scss
+++ b/scss/components/Skeleton.scss
@@ -28,8 +28,8 @@
     }
     height: 40px;
     width: 60%;
-    margin-top: 40px;
-    margin-left: 30px;
+    margin: auto;
+    margin-right: 40px;
 }
 
 .card-news-skeleton {
