--- a/scss/News.scss
+++ b/scss/News.scss
@@ -1,5 +1,18 @@
 .News {
     min-height: 600px;
+    position: relative;
+    &:before {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        top: -120px;
+        display: block;
+        left: 0;
+        border-style: solid;
+        border-width: 0px 0 120px 200vh;
+        border-color: transparent transparent $background-color transparent;
+    }
     .card-container {
         padding: 20px;
         display: flex;
