--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -8,7 +8,22 @@
         box-sizing: border-box;
     }
 
+    position: relative;
+    &:before {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        top: -120px;
+        display: block;
+        left: 0;
+        border-style: solid;
+        border-width: 0px 0 120px 200vh;
+        border-color: transparent transparent $background-color transparent;
+    }
+
     .timeline {
+        margin-top: 30px;
         ul {
             margin-bottom: 45px;
             li {
