--- a/scss/Scans.scss
+++ b/scss/Scans.scss
@@ -1,5 +1,18 @@
 .Scans {
     min-height: 600px;
+    position: relative;
+    &:before {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        top: -120px;
+        display: block;
+        left: 0;
+        border-style: solid;
+        border-width: 0px 0 120px 200vh;
+        border-color: transparent transparent $background-color transparent;
+    }
     .container {
         @media screen and (min-width: $md) {
             display: flex;
