--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -8,6 +8,7 @@
         text-shadow: black 4px 3px;
         margin-top: 45%;
 		text-transform: uppercase;
+		transform: scaleX(-1);
 		@media screen and (max-width: $md) {
 			font-size: 60px;
         }
@@ -35,7 +36,8 @@
   	margin: 0 auto;
   	overflow: hidden;
 	position: relative;
-  	width: 100%;
+	width: 100%;
+	transform: scaleX(-1);
   	@media screen and (min-width: $md) {
 		height: 350px;
 	}
@@ -75,14 +77,6 @@
   .c-glitch:hover &:nth-child(4) {
 	@media screen and (min-width: $lg) {
 		animation-name: glitch-anim-3;
-	}
-  }
-
-  .c-glitch:hover &:nth-child(5) {
-	@media screen and (min-width: $lg) {
-		animation-name: glitch-anim-4;
-		background-blend-mode: overlay;
-    	background-color: #af4949;
 	}
   }
 }
@@ -148,7 +142,7 @@
 @keyframes glitch-anim-2 {
 	0%, 100% {
 		opacity: 1;
-		transform: translate3d(-10px, 0, 0);
+		transform: translate3d(0, 0, 0) scale3d(-1, -1, 1);
 		clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
 	}
 
@@ -216,7 +210,7 @@
 @keyframes glitch-anim-3 {
 	0%, 100% {
 		opacity: 1;
-		transform: translate3d(0, -5px, 0) scale3d(-1, -1, 1);
+		transform: translate3d(0, 0, 0) scale3d(-1, -1, 1);
 		clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
 	}
 
@@ -285,22 +279,10 @@
 	}
 
 	92% {
-		clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
+		clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
 	}
 
 	94% {
 		clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
-	}
-}
-
-@keyframes glitch-anim-4 {
-	0%, 5% {
-		opacity: 0.2;
-		transform: translate3d(10px, 5px, 0);
-	}
-
-	5.5%, 100% {
-		opacity: 0;
-		transform: translate3d(0, 0, 0);
 	}
 }
