--- a/scss/components/Header.scss
+++ b/scss/components/Header.scss
@@ -1,11 +1,10 @@
 .header {
-    background-color: $background-color;
-    box-shadow: 0px 5px 5px $main-color;
     position: fixed;
     text-align: center;
     z-index: 100;
     width: 100%;
     top: 0;
+    transition: all 0.2s;
    .nav {
         padding: 0;
         margin: 0;
@@ -29,18 +28,17 @@
             a {
                 text-transform: uppercase;
                 text-decoration: none;
-                color:  $third-color;
+                color: $background-color;
+                text-shadow: black 0.5px 0.5px;
                 font-weight: bold;
                 width: 100%;
-                padding: 20px;
+                padding: 5px 10px;
                 &:hover {
-                  color: $main-color;
-                  text-shadow: black 0.5px 0.5px;
+                  border-bottom: 2px solid $background-color;
                 }
             }
             .active {
-              color: $main-color;
-              text-shadow: black 0.5px 0.5px;
+              border-bottom: 2px solid $background-color;
             }
         }
         .logo {
@@ -142,6 +140,21 @@
       right: 0;
       top: 40px;
     }
+}
+
+.isScrolling {
+  background-color: $background-color;
+  box-shadow: 0px 5px 5px $main-color;
+  .nav li a {
+    color:  $third-color;
+    text-shadow: none;
+    &:hover {
+      color: $main-color;
+    }
+  }
+  .active {
+    color: $main-color !important;
+  }
 }
 
 .menuIsOpenHeader {
