--- a/scss/components/Tags.scss
+++ b/scss/components/Tags.scss
@@ -2,8 +2,8 @@
     @media screen and (max-width: $md) {
         display: none;
     }
-    padding: 20px;
-    margin-top: 20px;
+    padding: 0 20px;
+    text-align: right;
     .tag {
         cursor: pointer;
         margin: 0px 10px;
