--- a/scss/components/Card-scans.scss
+++ b/scss/components/Card-scans.scss
@@ -57,6 +57,7 @@
                         font-size: 14px;
                         margin: 0;
                         margin-left: 10px;
+                        text-shadow: black 0.5px 0.5px;
                     }
                     button {
                         background-color: $main-color;
