--- a/styles.scss
+++ b/styles.scss
@@ -6,6 +6,8 @@
 @import './scss/Scans.scss';
 @import './scss/Animes.scss';
 @import './scss/NewsDev.scss';
+@import './scss/Account.scss';
+@import './scss/Profile.scss';
 
 //Components
 @import './scss/components/Text.scss';
