--- a/scss/components/Footer.scss
+++ b/scss/components/Footer.scss
@@ -1,12 +1,27 @@
 footer {
-    background-color: $main-color;
+    background-color: $second-color;
     padding: 20px;
     text-align: right;
-    color: $third-color;
-    text-shadow: white 0.5px 0.5px;
+    color: $background-color;
+    text-shadow: black 0.5px 0.5px;
+    text-transform: uppercase;
+    position: relative;
     a {
         float: left;
-        color: $third-color;
+        color: $background-color;
+        text-shadow: black 0.5px 0.5px;
         text-decoration: none;
+    }
+    &:before {
+        content: '';
+        width: 100%;
+        height: 0;
+        position: absolute;
+        top: -120px;
+        display: block;
+        left: 0;
+        border-style: solid;
+        border-width: 0px 0 120px 200vh;
+        border-color: transparent transparent $second-color transparent;
     }
 }
