add favorites animes feature

--- a/scss/Animes.scss
+++ b/scss/Animes.scss
@@ -19,5 +19,6 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
+        margin-bottom: 75px;
     }
 }
