--- a/scss/components/Card-scansVa.scss
+++ b/scss/components/Card-scansVa.scss
@@ -37,6 +37,21 @@
         background-size: cover;
         text-decoration: none;
         cursor: pointer;
+        z-index: -1;
+
+        i {
+            position: absolute;
+            top: 0;
+            right: 0;
+            font-size: 40px;
+            color: $background-color;
+            text-shadow: .5px .5px black;
+            padding: 10px 10px 20px 20px;
+            z-index: 5;
+        }
+        .fa-bookmark {
+            color: #ffd700;
+        }
 
         &::before {
             content: "";
