--- a/scss/Profile.scss
+++ b/scss/Profile.scss
@@ -13,4 +13,114 @@
         border-width: 0px 0 120px 200vh;
         border-color: transparent transparent $background-color transparent;
     }
+
+    .card-container {
+        padding: 20px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        margin-bottom: 75px;
+    }
+
+    .tabs-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .tabs {
+            display: flex;
+            position: relative;
+            background-color: #fff;
+            box-shadow: 0 0 1px 0 rgba($main-color, 0.15), 0 6px 12px 0 rgba(#185ee0, 0.15);
+            padding: 0.75rem;
+            border-radius: 99px; // just a high number to create pill effect
+            * {
+                z-index: 2;
+            }
+        }
+
+        input[type="radio"] {
+            display: none;
+        }
+
+        .tab {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 54px;
+            width: 200px;
+            font-size: 1.25rem;
+            font-weight: 500;
+            color: $third-color;
+            border-radius: 99px; // just a high number to create pill effect
+            cursor: pointer;
+            transition: color 0.15s ease-in;
+        }
+
+        .notification {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 2rem;
+            height: 2rem;
+            margin-left: 0.75rem;
+            border-radius: 50%;
+            background-color: $second-color;
+            transition: 0.15s ease-in;
+        }
+
+        input[type="radio"] {
+            &:checked {
+                & + label {
+                    color: $background-color;
+                    text-shadow: .5px .5px black;
+                    & > .notification {
+                        background-color: $main-color;
+                        color: #fff;
+                    }
+                }
+            }
+        }
+
+        input[id="scans"] {
+            &:checked {
+                & ~ .glider {
+                    transform: translateX(0);
+                }
+            }
+        }
+
+        input[id="animes"] {
+            &:checked {
+                & ~ .glider {
+                    transform: translateX(100%);
+                }
+            }
+        }
+
+        input[id="settings"] {
+            &:checked {
+                & ~ .glider {
+                    transform: translateX(200%);
+                }
+            }
+        }
+
+        .glider {
+            position: absolute;
+            display: flex;
+            height: 54px;
+            width: 200px;
+            background-color: $second-color;
+            z-index: 1;
+            border-radius: 99px; // just a high number to create pill effect
+            transition: 0.25s ease-out;
+        }
+
+        @media (max-width: 700px) {
+            .tabs {
+                transform: scale(0.6);
+            }
+        }
+    }
 }
