fix adala error & add bookmarks scans

--- a/scss/components/Footer.scss
+++ b/scss/components/Footer.scss
@@ -6,6 +6,7 @@ footer {
     text-shadow: black 0.5px 0.5px;
     text-transform: uppercase;
     position: relative;
+    margin-top: 75px;
     a {
         float: left;
         color: $background-color;
