--- a/scss/Scans.scss
+++ b/scss/Scans.scss
@@ -13,6 +13,27 @@
         border-width: 0px 0 120px 200vh;
         border-color: transparent transparent $background-color transparent;
     }
+    .list-filters {
+        text-align: right;
+        padding-right: 10px;
+        li {
+            cursor: pointer;
+            margin: 0px 10px;
+            color: $third-color;
+            text-shadow: $second-color 0.5px 0.5px;
+            font-size: 20px;
+            list-style-type: none;
+            display: inline-block;
+            &:hover {
+                color: $main-color;
+                font-weight: bold;
+                text-shadow: black 0.5px 0.5px;
+            }
+        }
+        .filter-active {
+            color: $main-color;
+        }
+    }
     .container {
         @media screen and (min-width: $md) {
             display: flex;
