--- a/scss/components/Card-scansVa.scss
+++ b/scss/components/Card-scansVa.scss
@@ -1,7 +1,19 @@
+.card-profile {
+    @media screen and (min-width: $md) and (max-width: $lg) {
+        width: calc(30%) !important;
+    }
+    @media screen and (min-width: $lg) and (max-width: $xlg) {
+        width: calc(22%) !important;
+    }
+    @media screen and (min-width: $xlg) {
+        width: calc(18%) !important;
+    }
+}
+
 .tilt-va {
     transform-style: preserve-3d;
     backface-visibility: hidden;
-    margin: 10px;
+    margin: auto;
     margin-top: 0;
     margin-bottom: 20px;
     box-shadow: 5px 5px 5px $main-color;
@@ -49,7 +61,7 @@
             padding: 10px 10px 20px 20px;
             z-index: 5;
         }
-        .fa-bookmark {
+        .fa-star {
             color: #ffd700;
         }
 
