fix search link

--- a/scss/Profile.scss
+++ b/scss/Profile.scss
@@ -1,6 +1,7 @@
 .Profile {
     min-height: 500px;
     position: relative;
+    margin-bottom: 100px;
     &:before {
         content: '';
         width: 100%;
